add everything lol

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         
     </script>
 <style>
-
+@font-face {
+font-family: Retro;
+  src: url('./Retro Gaming.ttf');
+}
 html, body {
     overflow: hidden;
     margin: 0;
@@ -31,7 +34,7 @@ html, body {
 }
 canvas{
     position: absolute;
-        top: 0;
+    top: 0;
     left: 0;
     bottom: 0;
     right: 0;
